Edit Post: Fix sidebar scroll overflow.

--- a/packages/edit-post/src/components/editor-regions/style.scss
+++ b/packages/edit-post/src/components/editor-regions/style.scss
@@ -54,6 +54,7 @@
 	bottom: 0;
 	left: 0;
 	background: $white;
+	overflow: auto;
 
 	&:empty {
 		display: none;
